test/bad/functions/variadic08.px

func f(Float... args) def
    return

f([0e0])
